<resources>
    <string name="app_name">GetYourFitTogether2.0</string>
    <string name="title_activity_main">GetYourFitTogether2.0</string>
    <string name="action_settings">Log Off</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="textview_fragment">Logged In: JDOE</string>
    <string name="title_activity_add_client">AddClient</string>
    <string name="title_activity_session_display">SessionDisplay</string>
    <string name="title_activity_add_session">AddSession</string>
    <string name="title_activity_billing_info">BillingInfo</string>
    <string name="title_activity_receipt">Receipt</string>
    <string name="add_client">Add Client</string>
    <string name="name1">Name</string>
    <string name="date1">Date</string>
    <string name="time1">Time</string>
    <string name="amount1">Amount $</string>
    <string name="email1">Email</string>
    <string name="send_receipt">Send Receipt</string>
    <string name="name_on_receipt">Name on receipt</string>
    <string name="date_of_receipt">Date of receipt</string>
    <string name="time_of_receipt">Time of receipt</string>
    <string name="amount_of_receipt">Amount of receipt</string>
    <string name="email_on_receipt">Email on receipt</string>
    <string name="date2">Date</string>
    <string name="time2">Time</string>
    <string name="amount2">Amount $</string>
    <string name="submit">Submit</string>
    <string name="billing_name">Billing Name</string>
    <string name="billing_address">Billing Address</string>
    <string name="card">Card #</string>
    <string name="security">Security</string>
    <string name="exp_date">Exp Date</string>
    <string name="submit_billing_info">Submit Billing Info</string>
    <string name="name3">Name</string>
    <string name="phone">Phone</string>
    <string name="email3">Email</string>
    <string name="add_billing_info">Add Billing Info</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_and_add_client">Save and Add Client</string>
    <string name="name4">Name</string>
    <string name="session_date1">Session Date:</string>
    <string name="session_completed1">Session Completed</string>
    <string name="session_date2">Session Date:</string>
    <string name="session_completed2">Session Completed</string>
    <string name="session_date3">Session Date:</string>
    <string name="session_completed3">Session Completed</string>
    <string name="add_session">Add Session</string>
</resources>
