<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Receipt">

    <include
        android:id="@+id/include3"
        layout="@layout/content_receipt" />

    <EditText
        android:id="@+id/editText_NameReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/name_on_receipt"
        android:inputType="textPersonName"
        android:text="@string/name3" />

    <EditText
        android:id="@+id/editText_DateReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/date_of_receipt"
        android:inputType="date"
        android:text="@string/date2" />

    <EditText
        android:id="@+id/editText_TimeReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/time_of_receipt"
        android:inputType="time"
        android:text="@string/time2" />

    <EditText
        android:id="@+id/editText_AmountPaidReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/amount_of_receipt"
        android:inputType="number"
        android:text="@string/amount2" />

    <View
        android:id="@+id/view_SignatureReceipt"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginTop="250dp" />

    <RadioGroup
        android:id="@+id/radioGroup_MethodReceipt"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="380dp" />

    <EditText
        android:id="@+id/editText_EmailReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:ems="10"
        android:hint="@string/email_on_receipt"
        android:inputType="textEmailAddress"
        android:text="@string/email3" />

    <Button
        android:id="@+id/button_SubmitReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickBackSessionDisplay"
        android:text="@string/send_receipt"
        app:layout_anchor="@+id/include3"
        app:layout_anchorGravity="bottom|center" />

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.design.widget.CoordinatorLayout>