<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClient">

    <include
        android:id="@+id/include2"
        layout="@layout/content_add_client" />

    <EditText
        android:id="@+id/editText_NameAddClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Add Client Name"
        android:inputType="textPersonName"
        android:text="@string/name1"
        app:layout_anchor="@+id/include2"
        app:layout_anchorGravity="top|center"
        tools:layout_marginTop="55dp" />

    <EditText
        android:id="@+id/editText_PhoneAddClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Add Client Phone"
        android:inputType="phone"
        android:text="@string/phone"
        app:layout_anchor="@id/editText_NameAddClient"
        app:layout_anchorGravity="end"
        tools:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/editText_EmailAddClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Add Client Email"
        android:inputType="textEmailAddress"
        android:text="@string/email1"
        app:layout_anchor="@id/editText_PhoneAddClient"
        app:layout_anchorGravity="end"
        tools:layout_marginTop="150dp" />

    <Button
        android:id="@+id/button_ToBillingAddClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickBillingInfo"
        android:text="@string/add_billing_info"
        app:layout_anchor="@id/editText_EmailAddClient"
        app:layout_anchorGravity="bottom"
        tools:layout_marginTop="250dp" />

    <Button
        android:id="@+id/button_ToCameraAddClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo"
        app:layout_anchor="@id/button_ToBillingAddClient"
        app:layout_anchorGravity="end"
        tools:layout_marginTop="300dp" />

    <Button
        android:id="@+id/button_SubmitAddClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSessionDisplay"
        android:text="@string/save_and_add_client"
        app:layout_anchorGravity="bottom|center"
        tools:layout_marginTop="500dp" />

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.design.widget.CoordinatorLayout>