<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SessionDisplay">

    <include
        android:id="@+id/include4"
        layout="@layout/content_session_display" />

    <view
        android:id="@+id/view_PhotoClientInfo"
        class="android.support.constraint.Placeholder"
        id="@+id/view"
        android:layout_width="111dp"
        android:layout_height="115dp"
        android:layout_marginTop="55dp" />

    <TextView
        android:id="@+id/textView_NameClientInfo"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="55dp"
        android:text="@string/name1"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_anchor="@+id/include4"
        app:layout_anchorGravity="top|center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="175dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_Date1ClientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:text="@string/session_date1"
                android:hint="Session Date"/>

            <CheckBox
                android:id="@+id/checkBox_Session1ClientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_completed1" />

            <View
                android:id="@+id/view_SigSession1ClientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_height="25dp" />

            <EditText
                android:id="@+id/editText_Date2ClientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:text="@string/session_date2"
                android:hint="Session Date"/>

            <CheckBox
                android:id="@+id/checkBox_Session2ClientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_completed2"
                android:hint="Session Completed"/>

            <View
                android:id="@+id/view_SigSession2ClientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_height="25dp" />

            <EditText
                android:id="@+id/editText_Date3ClientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:text="@string/session_date3"
                android:hint="Session Date"/>

            <CheckBox
                android:id="@+id/checkBox_Session3ClientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_completed3" />

            <View
                android:id="@+id/view_SigSession3ClientInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_height="25dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_ToAddSessionClientInfo"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:onClick="onClickAddSession"
        android:text="@string/add_session" />

    <Button
        android:id="@+id/button_BackToMainSessionDisplay"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="510dp"
        android:onClick="onClickBackToMain"
        android:text="Back To Client List"
        app:layout_anchor="@+id/button_BackToMainSessionDisplay"
        app:layout_anchorGravity="top|center" />

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.design.widget.CoordinatorLayout>